Fixed spacing around images

--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ div.work {
     padding-bottom: 35px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 div.portfolio {
